--- a/itoken-config/src/main/resources/application.yml
+++ b/itoken-config/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
       label: master
       server:
         git:
-          uri: http://git@github.com:9010/IToken.git
-          search-paths: itoken-config/respo
+          uri: https://github.com/9010/IToken.git
+          search-paths: blob/master/itoken-config/respo
           username: 1106690435@qq.com
           password: ZX199605116016zx
   zipkin:
