change main class and reload itoken-config

--- a/itoken-admin/pom.xml
+++ b/itoken-admin/pom.xml
@@ -76,7 +76,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.funtl.itoken.admin.AdminApplication</mainClass>
+                    <mainClass>cn.com.itoken.admin.ItokenAdminApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
