--- a/itoken-config/src/main/resources/application.yml
+++ b/itoken-config/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
       label: master
       server:
         git:
-          uri: https://github.com/9010/IToken.git
-          search-paths: itoken-config/respo
-          username: 1106690435@qq.com
-          password: ZX199605116016zx
+          uri: http://192.168.75.128/itoken/itoken-config.git
+          search-paths: respo
+          username: topsale@vip.qq.com
+          password: 12345678
   zipkin:
     base-url: http://localhost:9411
 
@@ -33,4 +33,3 @@ management:
     web:
       exposure:
         include: health,info
-
