--- a/itoken-zipkin/pom.xml
+++ b/itoken-zipkin/pom.xml
@@ -93,7 +93,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.funtl.itoken.zipkin.ZipKinApplication</mainClass>
+                    <mainClass>cn.com.itoken.zipkin.ItokenZipkinApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
