--- a/itoken-dependencies/pom.xml
+++ b/itoken-dependencies/pom.xml
@@ -24,10 +24,22 @@
 		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
 		<spring-boot-admin.version>2.1.6</spring-boot-admin.version>
 		<zipkin.version>2.10.1</zipkin.version>
+		<spring-boot-alibaba-durid.version>1.1.18</spring-boot-alibaba-durid.version>
+
+		<!-- Environment Settings -->
+		<mysql.version>5.1.46</mysql.version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
+			<!-- Srping Boot Begin -->
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>druid-spring-boot-starter</artifactId>
+				<version>${spring-boot-alibaba-durid.version}</version>
+			</dependency>
+			<!-- Srping Boot Begin -->
+
 			<!-- Spring Cloud Begin -->
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -68,6 +80,15 @@
 				<version>${zipkin.version}</version>
 			</dependency>
 			<!-- ZipKin End -->
+
+			<!-- Database Begin -->
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>${mysql.version}</version>
+				<scope>runtime</scope>
+			</dependency>
+			<!-- Database End -->
 		</dependencies>
 	</dependencyManagement>
 
