--- a/itoken-dependencies/pom.xml
+++ b/itoken-dependencies/pom.xml
@@ -29,6 +29,8 @@
 		<spring-boot-admin.version>2.1.6</spring-boot-admin.version>
 		<zipkin.version>2.10.1</zipkin.version>
 		<spring-boot-alibaba-durid.version>1.1.18</spring-boot-alibaba-durid.version>
+		<spring-boot-tk-mybatis.version>2.1.5</spring-boot-tk-mybatis.version>
+		<spring-boot-pagehelper.version>1.2.12</spring-boot-pagehelper.version>
 
 		<!-- Environment Settings -->
 		<mysql.version>5.1.46</mysql.version>
@@ -41,6 +43,16 @@
 				<groupId>com.alibaba</groupId>
 				<artifactId>druid-spring-boot-starter</artifactId>
 				<version>${spring-boot-alibaba-durid.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>tk.mybatis</groupId>
+				<artifactId>mapper-spring-boot-starter</artifactId>
+				<version>${spring-boot-tk-mybatis.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.pagehelper</groupId>
+				<artifactId>pagehelper-spring-boot-starter</artifactId>
+				<version>${spring-boot-pagehelper.version}</version>
 			</dependency>
 			<!-- Srping Boot Begin -->
 
