--- a/itoken-common-service/pom.xml
+++ b/itoken-common-service/pom.xml
@@ -21,6 +21,10 @@
     <dependencies>
         <!-- Spring Boot Begin -->
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
         </dependency>
