--- a/itoken-service-admin/pom.xml
+++ b/itoken-service-admin/pom.xml
@@ -19,10 +19,11 @@
     </properties>
 
     <dependencies>
+        <!-- Spring Boot Begin -->
         <dependency>
             <groupId>cn.com.itoken.common</groupId>
             <artifactId>itoken-common-service</artifactId>
-            <version>${project.parent.version}</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -50,19 +51,8 @@
                     <overwrite>true</overwrite>
                     <verbose>true</verbose>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>${mysql.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>tk.mybatis</groupId>
-                        <artifactId>mapper</artifactId>
-                        <version>3.4.4</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
+
     </build>
 </project>
