--- a/itoken-dependencies/pom.xml
+++ b/itoken-dependencies/pom.xml
@@ -29,11 +29,13 @@
 		<spring-boot-admin.version>2.1.6</spring-boot-admin.version>
 		<zipkin.version>2.10.1</zipkin.version>
 		<spring-boot-alibaba-durid.version>1.1.18</spring-boot-alibaba-durid.version>
-		<spring-boot-tk-mybatis.version>3.4.4</spring-boot-tk-mybatis.version>
+		<spring-boot-tk-mybatis.version>2.1.5</spring-boot-tk-mybatis.version>
 		<spring-boot-pagehelper.version>1.2.12</spring-boot-pagehelper.version>
+		<tk-mybatis-mapper.version>3.4.4</tk-mybatis-mapper.version>
 
 		<!-- Environment Settings -->
 		<mysql.version>5.1.46</mysql.version>
+		<lombok.version>1.18.8</lombok.version>
 	</properties>
 
 	<dependencyManagement>
@@ -104,7 +106,20 @@
 				<version>${mysql.version}</version>
 				<scope>runtime</scope>
 			</dependency>
+			<dependency>
+				<groupId>tk.mybatis</groupId>
+				<artifactId>mapper</artifactId>
+				<version>${tk-mybatis-mapper.version}</version>
+			</dependency>
 			<!-- Database End -->
+
+			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${lombok.version}</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
