--- a/itoken-dependencies/pom.xml
+++ b/itoken-dependencies/pom.xml
@@ -33,9 +33,10 @@
 		<spring-boot-pagehelper.version>1.2.12</spring-boot-pagehelper.version>
 		<tk-mybatis-mapper.version>3.4.4</tk-mybatis-mapper.version>
 
-		<!-- Environment Settings -->
+		<!-- Other Settings -->
 		<mysql.version>5.1.46</mysql.version>
 		<lombok.version>1.18.8</lombok.version>
+		<guava.version>27.0.1-jre</guava.version>
 	</properties>
 
 	<dependencyManagement>
@@ -117,6 +118,11 @@
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
 				<version>${lombok.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>${guava.version}</version>
 			</dependency>
 
 		</dependencies>
