--- a/itoken-dependencies/pom.xml
+++ b/itoken-dependencies/pom.xml
@@ -37,6 +37,7 @@
 		<mysql.version>5.1.46</mysql.version>
 		<lombok.version>1.18.8</lombok.version>
 		<guava.version>27.0.1-jre</guava.version>
+		<nekohtml.version>1.9.22</nekohtml.version>
 	</properties>
 
 	<dependencyManagement>
@@ -124,7 +125,11 @@
 				<artifactId>guava</artifactId>
 				<version>${guava.version}</version>
 			</dependency>
-
+			<dependency>
+				<groupId>net.sourceforge.nekohtml</groupId>
+				<artifactId>nekohtml</artifactId>
+				<version>${nekohtml.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
