--- a/itoken-config/respo/itoken-web-admin-dev.yml
+++ b/itoken-config/respo/itoken-web-admin-dev.yml
@@ -7,6 +7,12 @@ spring:
         url: http://localhost:8084
   zipkin:
     base-url: http://localhost:9411
+  thymeleaf:
+    cache: false #开发时关闭缓存，否则无法看到实时界面
+    mode: LEGACYHTML #非严格的HTML
+    encoding: UTF-8
+    servlet:
+      content-type: text/html
 
 server:
   port: 8601
