--- a/itoken-dependencies/pom.xml
+++ b/itoken-dependencies/pom.xml
@@ -38,6 +38,7 @@
 		<lombok.version>1.18.8</lombok.version>
 		<guava.version>27.0.1-jre</guava.version>
 		<nekohtml.version>1.9.22</nekohtml.version>
+		<jackson.version>2.9.6</jackson.version>
 	</properties>
 
 	<dependencyManagement>
@@ -129,6 +130,11 @@
 				<groupId>net.sourceforge.nekohtml</groupId>
 				<artifactId>nekohtml</artifactId>
 				<version>${nekohtml.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
