--- a/itoken-config/respo/itoken-service-redis-dev.yml
+++ b/itoken-config/respo/itoken-service-redis-dev.yml
@@ -4,9 +4,9 @@ spring:
   boot:
     admin:
       client:
-        url: http://192.168.75.137:8084
+        url: http://localhost:8084
   zipkin:
-    base-url: http://192.168.75.137:9411
+    base-url: http://localhost:9411
   redis:
     lettuce:
       pool:
