--- a/itoken-service-admin/pom.xml
+++ b/itoken-service-admin/pom.xml
@@ -30,6 +30,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Spring Boot End -->
     </dependencies>
 
     <build>
