--- a/itoken-service-sso/pom.xml
+++ b/itoken-service-sso/pom.xml
@@ -20,8 +20,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>cn.com.itoken.common</groupId>
+            <artifactId>itoken-common-service</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -36,6 +37,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>cn.com.itoken.service.sso.ItokenServiceSsoApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
