--- a/itoken-service-sso/pom.xml
+++ b/itoken-service-sso/pom.xml
@@ -24,7 +24,10 @@
             <artifactId>itoken-common-service</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
