--- a/itoken-service-admin/pom.xml
+++ b/itoken-service-admin/pom.xml
@@ -22,6 +22,11 @@
         <!-- Spring Boot Begin -->
         <dependency>
             <groupId>cn.com.itoken.common</groupId>
+            <artifactId>itoken-common-domain</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.com.itoken.common</groupId>
             <artifactId>itoken-common-service</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
