--- a/itoken-config/respo/itoken-service-sso-dev.yml
+++ b/itoken-config/respo/itoken-service-sso-dev.yml
@@ -22,8 +22,12 @@ spring:
 server:
   port: 8503
 
+feign:
+  hystrix:
+    enabled: true
+
 mybatis:
-  type-aliases-package: com.funtl.itoken.service.admin.domain
+  type-aliases-package: cn.com.itoken.common.domain
   mapper-locations: classpath:mapper/*.xml
 
 eureka:
