--- a/itoken-service-sso/pom.xml
+++ b/itoken-service-sso/pom.xml
@@ -26,12 +26,13 @@
         </dependency>
         <dependency>
             <groupId>cn.com.itoken.common</groupId>
-            <artifactId>itoken-common-service</artifactId>
+            <artifactId>itoken-common-web</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <groupId>cn.com.itoken.common</groupId>
+            <artifactId>itoken-common-service</artifactId>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
