--- a/itoken-common/pom.xml
+++ b/itoken-common/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>itoken-common</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>itoken-common</name>
-    <description>itoken-common</description>
+    <description>通用类工程</description>
 
     <properties>
         <java.version>1.8</java.version>
