--- a/itoken-service-admin/src/main/resources/bootstrap-prod.yml
+++ b/itoken-service-admin/src/main/resources/bootstrap-prod.yml
@@ -2,6 +2,6 @@ spring:
   cloud:
     config:
       uri: http://192.168.75.137:8888
-      name: itoken-service-admin
+      name: itoken-common-service, itoken-service-admin
       label: master
       profile: prod
