创建通用mybatis类

--- a/itoken-config/respo/itoken-service-sso-dev.yml
+++ b/itoken-config/respo/itoken-service-sso-dev.yml
@@ -33,7 +33,7 @@ feign:
     enabled: true
 
 mybatis:
-  type-aliases-package: cn.com.itoken.common.domain
+  type-aliases-package: cn.com.itoken.common.service.domain
   mapper-locations: classpath:mapper/*.xml
 
 eureka:
