--- a/itoken-config/respo/itoken-common-service-prod.yml
+++ b/itoken-config/respo/itoken-common-service-prod.yml
@@ -7,7 +7,7 @@ spring:
     base-url: http://localhost:9411
     
 mybatis:
-  type-aliases-package: cn.com.itoken.common.domain
+  type-aliases-package: cn.com.itoken.common.service.domain
   mapper-locations: classpath:mapper/*.xml
 
 eureka:
