--- a/itoken-service-posts/pom.xml
+++ b/itoken-service-posts/pom.xml
@@ -23,12 +23,12 @@
         <dependency>
             <groupId>cn.com.itoken.common</groupId>
             <artifactId>itoken-common-domain</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>cn.com.itoken.common</groupId>
             <artifactId>itoken-common-service</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -47,19 +47,7 @@
                     <mainClass>cn.com.itoken.service.posts.ItokenServicePostsApplication</mainClass>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.5</version>
-                <configuration>
-                    <configurationFile>${basedir}/src/main/resources/generator/generatorConfig.xml</configurationFile>
-                    <overwrite>true</overwrite>
-                    <verbose>true</verbose>
-                </configuration>
-            </plugin>
         </plugins>
-
     </build>
 
 </project>
