--- a/itoken-config/respo/itoken-service-posts-dev.yml
+++ b/itoken-config/respo/itoken-service-posts-dev.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: itoken-service-admin
+    name: itoken-service-posts
   datasource:
     druid:
       url: jdbc:mysql://127.0.0.1:3306/itoken-service-posts?useUnicode=true&characterEncoding=utf-8&useSSL=false
