--- a/itoken-config/respo/itoken-common-service-dev.yml
+++ b/itoken-config/respo/itoken-common-service-dev.yml
@@ -9,6 +9,8 @@ spring:
 mybatis:
   type-aliases-package: cn.com.itoken.common.service.domain
   mapper-locations: classpath:mapper/*.xml
+  configuration:
+    cache-enabled: true
 
 eureka:
   client:
