--- a/itoken-common-service/pom.xml
+++ b/itoken-common-service/pom.xml
@@ -85,6 +85,14 @@
             <scope>runtime</scope>
         </dependency>
         <!-- Database End -->
+
+        <!-- Redis Start -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
+        <!-- Redis End -->
     </dependencies>
 
 
