--- a/itoken-config/respo/itoken-service-posts-prod.yml
+++ b/itoken-config/respo/itoken-service-posts-prod.yml
@@ -1,6 +1,18 @@
 spring:
   application:
     name: itoken-service-posts
+
+  redis:
+    lettuce:
+      pool:
+        max-active: 8
+        max-idle: 8
+        max-wait: -1ms
+        min-idle: 0
+    sentinel:
+      master: mymaster
+      nodes: 127.0.0.1:26379
+
   datasource:
     druid:
       url: jdbc:mysql://192.168.75.133:3306/itoken-service-posts?useUnicode=true&characterEncoding=utf-8&useSSL=false
