--- a/itoken-common-service/pom.xml
+++ b/itoken-common-service/pom.xml
@@ -88,6 +88,11 @@
 
         <!-- Redis Start -->
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>2.1.3.RELEASE</version>
@@ -124,3 +129,5 @@
     </build>
 
 </project>
+
+
