添加结点配置

--- a/itoken-web-posts/src/main/resources/bootstrap-prod.yml
+++ b/itoken-web-posts/src/main/resources/bootstrap-prod.yml
@@ -2,6 +2,6 @@ spring:
   cloud:
     config:
       uri: http://192.168.75.137:8888
-      name: itoken-web-posts
+      name: itoken-web-posts, itoken-common-hosts
       label: master
       profile: prod
