--- a/itoken-common-web/pom.xml
+++ b/itoken-common-web/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>itoken-common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>cn.com.itoken.common</groupId>
+            <artifactId>itoken-common-domain</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
         <!-- Project End -->
 
         <!-- Spring Boot Begin -->
