--- a/itoken-service-upload/pom.xml
+++ b/itoken-service-upload/pom.xml
@@ -27,6 +27,13 @@
         </dependency>
         <!-- Project End -->
 
+        <!-- Spring Boot Start -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!-- Spring Boot End -->
+
         <!-- Spring Cloud Begin -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
